; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_mpi.c_mp_sqrmod.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_mpi.c_mp_sqrmod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_OKAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_sqrmod(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = call i32 @mp_init(i32* %9)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* @MP_OKAY, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %4, align 4
  br label %29

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @mp_sqr(i32* %16, i32* %9)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* @MP_OKAY, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = call i32 @mp_clear(i32* %9)
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %4, align 4
  br label %29

23:                                               ; preds = %15
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @mp_mod(i32* %9, i32* %24, i32* %25)
  store i32 %26, i32* %8, align 4
  %27 = call i32 @mp_clear(i32* %9)
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %23, %20, %13
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @mp_init(i32*) #1

declare dso_local i32 @mp_sqr(i32*, i32*) #1

declare dso_local i32 @mp_clear(i32*) #1

declare dso_local i32 @mp_mod(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
